<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="viewModel"
            type="com.qw73.hildegard.screens.authorization.sendOTP.SendOtpViewModel" />
    </data>

    <!-- layout here -->
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center|top"
        android:orientation="vertical"
        android:theme="@style/HildegardAuthorization">

        <TextView
            android:id="@+id/label_fill_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:text="@string/label_fill_phone_number"
            android:textAlignment="center"
            android:textColor="?attr/colorPrimary"
            android:textSize="20sp" />

        <com.vicmikhailau.maskededittext.MaskedEditText
            android:id="@+id/et_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:ems="10"
            android:focusable="false"
            android:hint="@string/phone_number_hint"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textColorHint="@color/gray"
            android:textIsSelectable="false"
            android:textSize="32sp"
            android:typeface="monospace"
            app:mask="+7 (###) ###-##-##" />

        <TextView
            android:id="@+id/view_error_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center_vertical"
            android:text="@string/invalid_number"
            android:textColor="?attr/colorAccent"
            android:textSize="20sp"
            android:visibility="@{viewModel.Error? View.VISIBLE : View.GONE}" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>