<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:theme="@style/HildegardSplash">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/splash_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@id/view_developed_by"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/image_logo"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginBottom="8dp"
            android:transitionName="@string/image_logo_transition"
            app:srcCompat="@drawable/ic_app" />

        <TextView
            android:id="@+id/view_heading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="-0dp"
            android:layout_marginBottom="24dp"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="?attr/colorOnSurface"
            android:textSize="52sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/view_developed_by"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"

        android:text="@string/developer"
        android:textAlignment="center"
        android:textColor="@color/gray"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>